# Computacao-Numerica

./: .gitignore  README.md
ImageProcessing/: findColor.py  videoControls.py
ImageProcessing/Lab4/: hsvRange.npz  photoControls.py  testPhotoControls.py
ImageProcessing/Lab_3_e_1/: Lab3ImageProcessing.py
Lab_1_Taylor/scilab/: lab1.sce  positions.csv  taylorMethods.sce
Lab_1_Taylor/videos/: output.avi
Lab_3-Sistemas_Lineares/: bigBang.sce  linearSystemMethods.sce
Lab_3-Sistemas_Lineares/report/: relatorio_lab3.tex
Lab_4_Interpolacao_e_Integracao/imageProcessing/: photoControls.py  resultImageProcessing.csv
Lab_4_Interpolacao_e_Integracao/scilab/: interpolacao_integracao.sce  intervalo.csv  intervalo_old.csv  lab_4.sce  resultImageProcessing.csv  script.py
Lab_5_EDOMMQ/FindByColorC++/: CMakeLists.txt  main.cpp
Lab_5_EDOMMQ/FindByColorC++/nbproject/: configurations.xml  project.xml
Lab_5_EDOMMQ/FindByColorC++/nbproject/private/: Default.properties  configurations.xml  private.xml
Lab_5_EDOMMQ/FindByColorC++/sources/FindByColor/: FindByColor.cpp  FindByColor.hpp
Lab_5_EDOMMQ/FindByColorC++/sources/VideoControl/: VideoControl.cpp  VideoControl.hpp
Lab_5_EDOMMQ/graficos/: Euler h:0.001 MMQ linear  Euler h:0.001 MMQ parábola  Euler h:0.1 MMQ linear  Euler h:0.1 MMQ parábola  Euler, h: 0.001  Euler, h: 0.1  RK2 h:0.001 MMQ linear  RK2 h:0.001 MMQ parábola  RK2 h:0.1 MMQ linear  RK2 h:0.1 MMQ parábola  RK2, h: 0.001  RK2, h: 0.1  RK4 h:0.001 MMQ linear  RK4 h:0.001 MMQ parábola  RK4 h:0.1 MMQ linear  RK4 h:0.1 MMQ parábola  RK4, h: 0.001  RK4, h: 0.1
(+3 files in other folders)
